fix viewport gap on mobile

--- a/src/_styles/country.css
+++ b/src/_styles/country.css
@@ -6,6 +6,7 @@
 
 .is-mobile .country__flag {
     width: 100%;
+    overflow: hidden;
 }
 
 .is-desktop .country__flag {
